# DigitalTwin

./: 5g-OBU-setup.md  5g_OBU_setup.md  GrafanaOpenTwins-info.md  README.md  Visualizer-decisions.md  check_collisions.md  for_fct.py  grafana_docker.md  intelligent_agent.md  simulated_coords.md  visualizer_decisions.md
broker-to-ditto/: adjacent_tiles_log.txt  agent_ideas.md  daemon.py  daemon_v2.py  daemon_v3.py  daemon_v4.py  daemon_v5.py
c2e-config/: README.md  full_hono_ditto_setup.sh  setup_mec_c2e.sh
data-collection-dbus/: CMakeLists.txt  a
executables/: README.md  create_connection.sh  create_policy.sh  create_twin.sh  full_broker_ditto_setup.sh
grafana-docker/: Dockerfile  docker-compose.yaml  grafana.ini  run_all.sh
intelligent-agent/: Dockerfile  run.sh
it2s-data-collection/: CMakeLists.txt  README.md
it2s-data-collection/src/: CMakeLists.txt  it2s-data-reader.cpp  qmi.cpp
logging/: README.md  network-delay.py  network-tt.py
obu/: Dockerfile  README.md  docker-compose.yml  supervisord.conf
scripts/: randomGen.py  randomGen2.py
tests/: alert-mec-obu-visualizer.py  alert-mec-obu.py  cam-to-feature.py  csv-visualizer.py  modemStatus-to-feature.py
tests-collision-alert/: checkColl-to-ditto-delay.py  collision-check-delay.py  ditto-to-OBU-delay.py  multiple-boxplot.py  multiple-cdf.py
tests-feature-update/: ditto-to-ws-delay.py  hono-to-ditto-delay.py  modemStatus-to-feature.py  multiple-boxplot.py  multiple-cdf.py  obu-to-hono-delay.py  one-stacked-bar-chart.py  stacked-bar-chart.py
tests4-collision-alert/: SUM_ALL.py  multiple-boxplot.py  (+8 more)
(+235 files in other folders)
